fixing event title on mobile

--- a/chabadofislip/homepage.css
+++ b/chabadofislip/homepage.css
@@ -644,7 +644,7 @@ div#SubscribeFormContainer {
     font-family: "Montserrat", Arial, sans-serif !important;
 
     @media screen and (max-width: 650px) {
-      top: 0;
+      top: -25px;
     }
   }
 
@@ -659,7 +659,7 @@ div#SubscribeFormContainer {
     content: " ";
 
     @media screen and (max-width: 650px) {
-      top: 13px;
+      top: 64px;
     }
   }
 }
